# IncidentDesk

./: .gitignore  IncidentDesk.py  IncidentDesk.spec  LICENSE  README.md  pyproject.toml  requirements.txt
installer/: IncidentDesk.iss
src/: IncidentDesk.py  main.py
src/incident_desk/: __init__.py  __main__.py  app.py  config.py  dates.py  db.py  dialogs.py  exporter.py  icons.py  incident_form.py  list_manager.py  notes_windows.py  updater.py  user_guide.py  window_utils.py
